<resources>
    <string name="app_name">Recipe Catalogue</string>
    <string name="txt_breakfast">Breakfast</string>
    <string name="txt_dessert">Dessert</string>
    <string name="txt_seafood">Seafood</string>
    <string name="txt_vegetarian">Vegetarian</string>
    <string name="content_image_banner_food">Image Banner Food</string>
    <string name="garlic_butter_shrimp">Garlic Butter Shrimp</string>
    <string name="cooked">Cooked</string>
    <string name="content_image_item">Image for Row Item Found</string>
</resources>