<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_dessert">

    <fragment
        android:id="@+id/navigation_dessert"
        android:name="com.Kareem.myapplication.ui.DessertFragment"
        android:label="@string/txt_dessert"
        tools:layout="@layout/fragment_dessert" />

    <fragment
        android:id="@+id/navigation_breakfast"
        android:name="com.Kareem.myapplication.ui.BreakfastFragment"
        android:label="@string/txt_breakfast"
        tools:layout="@layout/fragment_breakfast" />

    <fragment
        android:id="@+id/navigation_vegetarian"
        android:name="com.Kareem.myapplication.ui.VegetarianFragment"
        android:label="@string/txt_vegetarian"
        tools:layout="@layout/fragment_vegetarian" />
    <fragment
        android:id="@+id/navigation_seafood"
        android:name="com.Kareem.myapplication.ui.SeafoodFragment"
        android:label="@string/txt_seafood"
        tools:layout="@layout/fragment_seafood" />
</navigation>