<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical"
    tools:context=".ui.BreakfastFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cv_banner"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            app:cardCornerRadius="20dp"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/content_image_banner_food"
                android:foreground="@drawable/shadow_transparent"
                android:scaleType="centerCrop"
                android:src="@drawable/img_shrimp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tv_food_banner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginBottom="20dp"
                    android:text="@string/garlic_butter_shrimp"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@id/view_rounded_white"
                    app:layout_constraintEnd_toStartOf="@id/view_rounded_white"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/view_rounded_white" />

                <View
                    android:id="@+id/view_rounded_white"
                    android:layout_width="80dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/white_rounded"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:paddingTop="4dp"
                    android:text="1.2 K"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="@id/view_rounded_white"
                    app:layout_constraintStart_toStartOf="@id/view_rounded_white"
                    app:layout_constraintTop_toTopOf="@+id/view_rounded_white" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:paddingBottom="6dp"
                    android:text="@string/cooked"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    app:layout_constraintBottom_toBottomOf="@id/view_rounded_white"
                    app:layout_constraintEnd_toEndOf="@id/view_rounded_white"
                    app:layout_constraintStart_toStartOf="@id/view_rounded_white" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_breakfast"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@id/cv_banner"
            tools:listitem="@layout/row_item_food" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>